tests/ui/feature-gates/feature-gate-may-dangle.stderr
error[E0658]: `may_dangle` has unstable semantics and may be removed in the future
  --> $DIR/feature-gate-may-dangle.rs:6:13
   |
LL | unsafe impl<#[may_dangle] A> Drop for Pt<A> {
   |             ^^^^^^^^^^^^^
   |
   = note: see issue #34761 <https://github.com/rust-lang/rust/issues/34761> for more information
   = help: add `#![feature(dropck_eyepatch)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
